external-crates/move/crates/move-prover/tests/snapshots/ghost_variable_compiler_checks/no_declaration.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
---
Verification failed: exiting with bytecode transformation errors
error[E0011]: undeclared global variable u8:
   ┌─ tests/inputs/ghost_variable_compiler_checks/no_declaration.move:9:5
   │  
 9 │       ghost::declare_global_mut<T, bool>();
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·  
20 │ ╭ public fun bar_spec<T>() {
21 │ │     bar<T>()
22 │ │ }
   │ ╰─'

error[E0011]: undeclared global variable u64:
   ┌─ tests/inputs/ghost_variable_compiler_checks/no_declaration.move:10:5
   │  
10 │       ghost::declare_global<u64, bool>();
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·  
20 │ ╭ public fun bar_spec<T>() {
21 │ │     bar<T>()
22 │ │ }
   │ ╰─'

error[E0011]: undeclared global variable T:
   ┌─ tests/inputs/ghost_variable_compiler_checks/no_declaration.move:9:5
   │  
 9 │       ghost::declare_global_mut<T, bool>();
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   ·  
20 │ ╭ public fun bar_spec<T>() {
21 │ │     bar<T>()
22 │ │ }
   │ ╰─'
